# devin-remediation-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
app/: devin.py  github.py  main.py  store.py
app/templates/: index.html
src/: config.py  dashboard.py  github_client.py  main.py  models.py  orchestrator.py  poller.py
tests/: conftest.py  test_devin.py  test_github.py  test_main.py  test_store.py
