[project]
name = "devin-remediation-service"
version = "0.1.0"
description = "An event-driven automation that scans a GitHub repository for issues labelled devin-remediate and spins up Devin sessions to fix them."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "jinja2==3.1.4",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-httpx==0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
default-groups = ["dev"]
